tab里面样式修改

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -12,6 +12,7 @@
                 <div class="rename-ppm">ppm</div>
                 <div id="myChart14"></div>
                 <div class="shujuWajue_left_top_list">
+                    <div>模块商名称：</div>
                     <form action="">
                         <select name="请选择" onchange="tab4JianSelected(this)">
                             <option class="showLabel" style="display: none">常州福兰德电器</option>
