--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -134,6 +134,7 @@
                         <div class="flat-right-top">
                             <div class="chartBorder">
                                 <h3 id="properties_code_div">覆盖专业能力：0</h3>
+                                <div class="labName">实验室数量</div>
                                 <div class="myChart">
                                     <!--<img src="${contextPath!}/static/img/flatRT.png">-->
                                 </div>
