展开地图问题及样式修改

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -125,8 +125,8 @@
                     <div class="flat-right-top">
                         <div class="chartBorder">
                             <h3 id="properties_code_div">覆盖专业能力：0</h3>
-                            <div class="myChart">
-                            </div>
+                            <div class="labName">实验室数量</div>
+                            <div class="myChart"></div>
                         </div>
                     </div>
                 </div>
