实验室状态修改

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab2.css">
 </head>
 
-<div id="tab2" class="box">
+<div id="tab2" class="box selected">
     <div id="tab2_left">
         <!--分页按钮-->
         <div class="fenye">
