--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -5,8 +5,8 @@
 
     <div class="tab">
         <ul>
-            <li class="tab-item">实验室状态</li>
-            <li class="tab-item active_right">数据结果</li>
+            <li class="tab-item active_right">实验室状态</li>
+            <li class="tab-item">数据结果</li>
             <li class="tab-item">数据挖掘</li>
         </ul>
     </div>
@@ -46,10 +46,10 @@
 ##}
 <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
 <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
-<!-- <script src="${contextPath!}/static/js/tab1_statistics.js?time=New Date()"></script>-->
-<script src="${contextPath!}/static/js/tab2_statistics.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tab3_statistics.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/tab4_statistics.js?time=New Date()"></script>
+
+<script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/tabs/tab3.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/tabs/tab4.js?time=New Date()"></script>
 <script>
     var labTypeCode;//实验室类型
 
