--- a/src/main/webapp/static/css/tabs/tab3.css
+++ b/src/main/webapp/static/css/tabs/tab3.css
@@ -45,7 +45,7 @@
         width: 200%;
         height: 92%;
         padding: 0.2% 1% .6% 0;
-        left: -100%;
+        left:0;
         color: #6cf;
 
     }
