修改曲线图例

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -636,7 +636,7 @@
                         <li>试验编号：<span id="center_sybh_id"></span></li>
                         <li>样品编号：<span id="center_ypbm_id"></span></li>
                         <li>产品型号：<span id="center_cpxh_id"></span></li>
-                        <li>试验项目：<span>1111111111</span></li>
+                        <li>试验项目：<span id="center_testPro_id"></span></li>
                     </ul>
                 </div>
                 <div class="sheshi_right_left">
