--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="mapArea" style="z-index: 999">
                         <!--平面地图位置-->
-                        <iframe id="iframe" class="iframe map" scrolling="no" frameborder="0" src="/hlht/lab/flatMap"></iframe>
+                        <iframe id="iframe" class="iframe map" scrolling="no" frameborder="0" src="${contextPath!}/lab/flatMap"></iframe>
                     </div>
                     <div class="flat-right">
                         <div class="flat-right-bottom">
