--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -1,4 +1,3 @@
-## layout("ulab.html",{}){
 <div id="r" style="display: none">
 
     <!--这里是后面4屏的代码-->
@@ -43,7 +42,6 @@
     ##}
 
 </div>
-##}
 <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
 <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
 
@@ -91,9 +89,9 @@
 
 
         /* loadTab1Data(); */
-        loadTab2Data();
+       /*  loadTab2Data();
         loadTab3Data();
-        loadTab4Data();
+        loadTab4Data(); */
     });
 
 </script>
