--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -126,6 +126,7 @@ $(function () {
     //整机和模块的切换
     $("#tab3").find(".btnGroup > span").click(function () {
         $(this).addClass("active").siblings().removeClass("active")
-    })
+    });
+    loadTab3Data();
 })
 </script>
