--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -194,34 +194,8 @@
         </div>
     </div>
 </div>
-
-
-<!--</body>-->
-<!--&lt;!&ndash;<script src="../../../../static/asserts/js/jquery-2.2.4.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;<script src="../../../../static/asserts/js/bootstrap.min.js"></script>&ndash;&gt;-->
-
-<!--<script>-->
-<!--var bodyScale = 1;-->
-<!--var pageH;-->
-<!--var pageW;-->
-<!--//    pageH = $(window).height()-17;忘记为何-17-->
-<!--pageH = $(window).height();-->
-<!--pageW = pageH * 16 * 8 / (9 * 3);-->
-
-<!--function pageResize() {-->
-<!--$("#content").css("width", pageW);-->
-<!--var bodyFontSize = pageH / 595 * 100 + "%";-->
-<!--bodyScale = pageH / 595;-->
-<!--$("body").css("font-size", bodyFontSize);-->
-<!--$(".fullScreen_map").css("width", pageW);-->
-<!--//        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyScale)-->
-<!--}-->
-<!--pageResize();-->
-
-<!--</script>-->
-<!--<script src="../../../../static/asserts/echarts/echarts-3.5.2.js"></script>-->
-<!--<script src="../../../../static/asserts/js/highcharts.js"></script>-->
-<!--<script src="../../../../static/js/manyEcharts.js"></script>-->
-<!--<script src="../../../../static/js/tabs/tab2.js"></script>-->
-
-<!--</html>-->
+<script>
+$(function () {
+	loadTab2Data();
+});
+</script>
