--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -3,8 +3,9 @@
     height: 100%;
     position: absolute;
     z-index: 10;
-    background-image: url(../img/bg-2.jpg);
-    background-size: 100% 100%;
+   /*  background-image: url(../img/bg-2.jpg); */
+    /* background-size: 100% 100%; */
+    background-color:#04032d;
     font-size: 1.5em;
     overflow: hidden;
 }
