--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -42,7 +42,7 @@
                     <div id="myChart15_2"></div>
                 </div>
                 <div class="shujuWajue_left_bottom_cpk">
-                    <h3><span class="white" id="tab4_jiance_xh_name2"></span> CpK分析</h3>
+                    <h3><span class="white" id="tab4_jiance_xh_name2"></span> cpk分析</h3>
                     <p class="result" id="tab4_jiance_xh_result2"></p>
                     <div id="myChart16"></div>
                 </div>
