--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -127,17 +127,17 @@
     float: left;
 }
 .shishi_right .sheshi_right_right{
-    width: 16%;
-    height: 92.5%;
+    width: 18%;
+    height: 84.5%;
     float: left;
     padding-top: 2%;
     position: absolute;
-    top: 10%;
-    right: 0;
+    top: 8%;
+    right: -2.5%;
     /* padding-right: 3%; */
     overflow-y: auto;
     margin-right: 3%;
-    /*margin-top: 1%;*/
+    /* margin-top: 1%; */
 }
 .shishi_right .sheshi_right_right .legend_ul{
     width: 100%;
