--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -121,6 +121,10 @@
     width: 89%;
     height: 45%;
 }
+#main1_world,#main2_world{
+    width: 89%;
+    height: 45%;
+}
 .shishi_right .sheshi_right_left{
     width: 90%;
     height: 90%;
