图形提示框字体大小

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -694,7 +694,7 @@
                 <h3 class="lab_one_title">实施监测</h3>
                 <div class="labMain_cbro_ul">
                     <ul>
-
+                        <li><span></span></li>
                         <li><span class="li_bg li_bg_07"></span><a>视频监控</a></li>
                         <li><span class="li_bg li_bg_08"></span><a>曲线监控</a></li>
                         <li><span></span></li>
@@ -779,6 +779,7 @@
     $(function () {
         //中心实验室顶上的“返回总状态”和“中海博睿实验室”两个按钮
         var $labMain_ct_btn = $(".labMain_ct_btn");
+
         $labMain_ct_btn.eq(0).hover(function () {
             $(this).css("color", "#069").find(".icon").css("background-image", "url(${contextPath!}/static/img/labMain/labMain_toTotalStatus_active.png)")
         }, function () {
@@ -786,7 +787,7 @@
         }).click(function () {
             $(".labMain_content").hide();
             $("#r").show();
-            var $li = $("#l").find(".flat-footer .legend ul.legend-bottom li");
+            var $li = $(".left3x3").find(".flat-footer .legend ul.legend-bottom li");
             $li.removeClass("active").each(function () {
                 bgImgOff($(this))
             })
