--- a/src/main/webapp/static/css/labAnalysis.css
+++ b/src/main/webapp/static/css/labAnalysis.css
@@ -1,111 +1,121 @@
 @charset "utf-8";
-.zhbr_analysis{
-	width: 100%;
-	height: 97%;
+.zhbr_analysis {
+    width: 100%;
+    height: 97%;
 }
-.lab_main{
-	 width:100%; 
-	display:flex;
-	flex-direction: column;
-	margin:1% auto;
-	height: 95%;
-	}
-	
+
+.lab_main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 1% auto;
+    height: 95%;
+}
+
 .labMain_cb_left .lab_title {
-    left:12.5%;
+    left: 12.5%;
 }
-.la_top{
-	flex:1;
-	margin: 0% 1% 0.5% 1%;
-	display:flex;
-	flex-direction: row;
-	
-	}
-.la_center{
-	flex:1;
-	margin: 0.5% 1%;
-	display:flex;
-	
-	}		
-.la_bottom{
-	flex:1;
-	margin: 0.5% 1%;
-	display:flex;
-	flex-direction: row;
-}	
-.la_data_left{
-	flex:1;
-	background:url(../img/labMain/border-short.png) 0 0 no-repeat;
-	background-size:100% 100%;
-	height:100%;
-	
-	}
-.la_data_right{
-	flex:4;
-	height:100%;
-	margin-left:1%;
-	background:url(../img/labMain/border-long.png)0 0 no-repeat;
-	background-size:100% 100%;
-	
-	
-	}
-			
-.la_data_left h3{
-	color:#fff;
-	margin-top:4%;
-	text-align:center;
-	font-size:1.3em;
-	
-	}
-	
-.la_datal_content{
-	width:108%;
-	height:70%;
-	font-size:1em;
-	margin:5.5% 1% 1% 1%;
-}	
-	
-.la_datal_legend{
-	float:left;
-	height:100%;
-	width:50%;
-	
-	}
-.la_data_left_data{
-	float:left;
-	width:50%;
-	height:100%;
-	vertical-align:middle;
-	
-}	
+
+.la_top {
+    flex: 1;
+    margin: 0% 1% 0.5% 1%;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.la_center {
+    flex: 1;
+    margin: 0.5% 1%;
+    display: flex;
+
+}
+
+.la_bottom {
+    flex: 1;
+    margin: 0.5% 1%;
+    display: flex;
+    flex-direction: row;
+}
+
+.la_data_left {
+    flex: 1;
+    background: url(../img/labMain/border-short.png) 0 0 no-repeat;
+    background-size: 100% 100%;
+    height: 100%;
+
+}
+
+.la_data_right {
+    flex: 4;
+    height: 100%;
+    margin-left: 1%;
+    background: url(../img/labMain/border-long.png) 0 0 no-repeat;
+    background-size: 100% 100%;
+
+}
+
+.la_data_left h3 {
+    color: #fff;
+    margin-top: 4%;
+    text-align: center;
+    font-size: 1.3em;
+
+}
+
+.la_datal_content {
+    width: 108%;
+    height: 70%;
+    font-size: 1em;
+    margin: 5.5% 1% 1% 1%;
+}
+
+.la_datal_legend {
+    float: left;
+    height: 100%;
+    width: 50%;
+
+}
+
+.la_data_left_data {
+    float: left;
+    width: 50%;
+    height: 100%;
+    vertical-align: middle;
+
+}
+
 .la_datal_legend ul {
-	height:90%;
-	margin:4% 0 1% 5%;
-	font-size: 1.1em;
-	
-}	
-	
-.la_datal_legend ul li{
-	height:33%;
-	/*padding:3% 1% 1% 5%;*/
-	text-align:left;
-	white-space: nowrap;
-}			
-	
-.la_data_echart{
-	height:95%;
-	width:95%;
-	margin:1% 1% 1% 1%;
-	}	
-	
-		
-.la_data_right { }		
-.la_data_right p{ text-align:center; font-size:1em; margin-top:1%;}		
-.right_echart{
-	margin:1%;
-	width:98%;
-	height:78%;
-	
+    height: 90%;
+    margin: 4% 0 1% 5%;
+    font-size: 1.2em;
+
+}
+
+.la_datal_legend ul li {
+    height: 33%;
+    /*padding:3% 1% 1% 5%;*/
+    text-align: left;
+    white-space: nowrap;
+}
+
+.la_data_echart {
+    height: 95%;
+    width: 95%;
+    margin: 1% 1% 1% 1%;
+}
+
+.la_data_right p {
+    text-align: center;
+    font-size: 1.4em;
+    margin-top: 0.5%;
+}
+
+.right_echart {
+    margin: 0 1%;
+    width: 98%;
+    height: 78%;
+
 }
 	
 
