--- a/src/main/webapp/static/css/labMain.css
+++ b/src/main/webapp/static/css/labMain.css
@@ -403,11 +403,11 @@ a, a:hover {
 }
 
 .labMain_cbr_three ul {
-    padding-top: 4em;
+    padding-top: 0;
 }
 
 .labMain_cbr_three .labMain_cbro_ul ul li {
-    padding: 0em 1.5em;
+    padding: 0 1.5em;
     height: 30%;
 }
 
