国外实验室

--- a/src/main/webapp/static/css/centerLabWorld.css
+++ b/src/main/webapp/static/css/centerLabWorld.css
@@ -15,3 +15,7 @@
 .labMain_content_country .labMain_cbr_three ul{
     padding-top: 2em;
 }
+.shishi_right .sheshi_right_right #legend_ul_world{
+    width: 100%;
+    overflow: hidden;
+}
