--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -16,8 +16,8 @@
     height: 100%;
     width: 80%;
     float: left;
-    background: url("../img/labMain/shishiBoder.png") no-repeat;
-    background-size: 97% 95%;
+    /*background: url("../img/labMain/shishiBoder.png") no-repeat;*/
+    /*background-size: 97% 95%;*/
     position: relative;
     display: none;
 }
@@ -119,7 +119,7 @@
 }
 #main1,#main2{
     width: 89%;
-    height: 45%;
+    height: 47%;
 }
 #main1_world,#main2_world{
     width: 89%;
@@ -127,7 +127,7 @@
 }
 .shishi_right .sheshi_right_left{
     width: 90%;
-    height: 90%;
+    height: 93%;
     float: left;
 }
 .shishi_right .sheshi_right_right{
