解决出现横向滚动条的问题

--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="renderer" content="webkit">
-<meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-<title> ${title!'U-lab全球互联数据中心'}</title>
-<!--<link rel="shortcut icon" href="img/shortcutIcon.png">-->
-<script> var contextPath = '${contextPath!}';</script>
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
-<script>
-    var bodyScale = 1;
-    var pageH;
-    var pageW;
-    pageH = $(window).height();
-    pageW = pageH * 16 * 7 / (9 * 3);
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <title> ${title!'U-lab全球互联数据中心'}</title>
+    <!--<link rel="shortcut icon" href="img/shortcutIcon.png">-->
+    <script> var contextPath = '${contextPath!}';</script>
+    <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+    <script>
+        /*屏幕描述
+         一共 7x3 个屏幕，每一块屏幕是1360x768，
+         总共的大小就是9520x2304，比预计像素少7x6=42个像素。*/
 
-    function pageResize() {
-        $("#content").css("width", pageW);
-        var bodyFontSize = pageH / 595 * 100 + "%";
-        bodyScale = pageH / 595;
-        $("body").css("font-size", bodyFontSize);
-        $(".fullScreen_map").css("width", pageW);
-//        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
-    }
-    pageResize();
-</script>
+        var bodyScale = 1;
+        var pageH = $(window).height();
+        var pageW = pageH * 16 * 7 / (9 * 3);
+        if (pageH > 2300) { // 如果是大屏幕(2304)
+            pageW -= 42
+        }
+        function pageResize() {
+            $("#content").css("width", pageW);
+            var bodyFontSize = pageH / 595 * 100 + "%";
+            bodyScale = pageH / 595;
+            $("body").css("font-size", bodyFontSize);
+            $(".fullScreen_map").css("width", pageW);
+            console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
+        }
+        pageResize();
+    </script>
 </head>
 <body class="zh_CN">
 <!-- 引入公共头header -->
@@ -33,12 +37,6 @@ ${layoutContent}
 <!-- 引入公共低 footer-->
 </body>
 
-<!--屏幕描述
-一共 7x3 个屏幕，
-每一块屏幕是1920x1080
-总共的大小就是13440x3240
-3/7的宽度是5760,
-在笔记本上比例不变适应高度后，宽度为3186px
--->
+
 </html>
   
