--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -17,10 +17,12 @@
         var bodyScale = 1;
         var pageH = $(window).height();
         var pageW = pageH * 16 * 7 / (9 * 3);
-        if (pageH > 2300) { // 如果是大屏幕(2304)
-            pageW -= 42
-        }
+        alert(pageW)
+         if (pageH > 2300) { // 如果是大屏幕(2304)
+           pageW -= 42 
+        } 
         function pageResize() {
+        	alert(pageW)
             $("#content").css("width", pageW);
             var bodyFontSize = pageH / 595 * 100 + "%";
             bodyScale = pageH / 595;
